Texts updated, minor css fixes.

--- a/course/app/assets/stylesheets/welcome.css.scss
+++ b/course/app/assets/stylesheets/welcome.css.scss
@@ -67,7 +67,7 @@ html, body {
 }
 
 #program, #podminky {
-  height: 200px;
+  height: 300px;
 }
 
 #program {
@@ -202,7 +202,7 @@ h6 {
 }
 
 h1.nadpis {
-  margin-bottom: 72px;
+  margin: 48px 0 72px;
   position: relative;
   line-height: 1.3;
 }
