--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -32,10 +32,10 @@
         %strong
           Somatic Experiencing
           %sup &reg;
-          \/ Somatické prožívání
-        je velmi efektivní přístup umožňující léčení traumatu, který je vyučovaný po celém světě.
+          \/ Somatické prožívání (SE)
+        je velmi efektivní přístup umožňující léčení traumatu vyučovaný po celém světě.
       %p
-        Jednodenní workshop, na kterém se seznámíte se základními metodami somatického prožívání. Je určen pro všechny zájemce o třídenní workshop  
+        Jednodenní workshop, na kterém se seznámíte se základními metodami somatického prožívání, je určen pro všechny zájemce o třídenní workshop  
         %strong Práce s traumatem u dětí,
         kteří nemají žádný výcvik v této metodě.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
