--- a/course/app/views/welcome/kontakt.html.haml
+++ b/course/app/views/welcome/kontakt.html.haml
@@ -1,17 +1,33 @@
 .container.mt-48
   .row
-    .col-md-12
-      %h1 Kontakt
-    .col-md-6
-      %h2 Informace k workshopu, registraci
-      %dl.dl-horizontal
-        %dt
-        %dd 
-          %strong Ing. Zlata Koštejnová
-        %dt mobil: 
-        %dd 777 626 514
-        %dt email:
-        %dd 
-          = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
-    .col-md-6
+    .col-md-12.text-center
+      %h1 Organizátorky
+    .col-md-4
+      %h4 Ing. Zlata Koštejnová
+      %p Terapeutka Kraniosakrální biodynamiky a praktikantka metody Somatic Experiencing ® 
+      %p
+        %strong mobil:
+        777 626 514
+        %br
+        %strong email:
+        = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
+    .col-md-4
+      %h4  Mgr. Michaela Čápová
+      %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ®
+      %p
+        %strong mobil:
+        739 019 623
+        %br
+        %strong email:
+        = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
+    .col-md-4
+      %h4  Mgr. Tereza Koryntová
+      %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ®
+      %p
+        %strong mobil:
+        732 743 818 
+        %br
+        %strong email:
+        = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
+    .col-md-12.text-center
       %h2 Fakturační údaje
