--- a/course/app/views/subscriber_mailer/registration_confirmation.text.erb
+++ b/course/app/views/subscriber_mailer/registration_confirmation.text.erb
@@ -34,4 +34,12 @@ Zrušení workshopu
  - Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2015. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
 
 Úplné znění podmínek
- - naleznete na adrese http://secourse.cz/podminky
+ - naleznete na adrese www.somaticexperiencing.cz/podminky.
+
+---
+
+Na setkání s Vámi se těší tým organizátorek:
+
+Ing. Zlata Koštejnová  |  Mgr. Michaela Čápová  |  Mgr. Tereza Koryntová
+    
+    777 626 514               739 019 623              732 743 818 
