--- a/course/app/views/subscriber_mailer/_workshop.html.haml
+++ b/course/app/views/subscriber_mailer/_workshop.html.haml
@@ -1,7 +1,7 @@
-%table
+%table{:border => "1", :cellpadding => "5", :cellspacing => "0"}
   %tr
     %th
-    %th celková cena
+    %th celková cena do 30.4.
     %th záloha do 30.4.
     %th doplatek do 15.6.
 
