Final typo fixes.

--- a/course/app/views/welcome/podminky.html.haml
+++ b/course/app/views/welcome/podminky.html.haml
@@ -3,7 +3,7 @@
     #podminky
 .container.podminky
   .row
-    .col-md-9
+    .col-sm-9
       %h1 Podmínky
       %ol
         %li
@@ -32,7 +32,7 @@
               %td 10 500 Kč
 
             %tr
-              %td minimálně záloha do 30.4.
+              %td minimální záloha do 30.4.
               %td 1 000 Kč
               %td 3 000 Kč
               %td 4 000 Kč
@@ -44,7 +44,7 @@
               %td 6 500 Kč
         %li
           %p
-            %strong Platba kurzovného nebo (zálohy a doplatku)
+            %strong Platba kurzovného nebo zálohy a doplatku
           %p Celé kurzovné nebo příslušnou zálohu zašlete na účet č.: 2500029896/2010.
           %p Jako variabilní symbol obou plateb uveďte své telefoní číslo.
         %li
