--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -70,7 +70,7 @@
                   Somatic Experiencing
                   %sup &reg;
                   \/ Somatické prožívání (SE)
-                je jedním z nejefektivnějších nástrojů pro léčení traumatu vyučovaný po celém světě. Je to přístup umožňující terapeutovi provést klienta náročnými stavy a situacemi. Somatické prožívání je specifická metoda práce s tělem a nervovým systémem. Nabízí základní přístup k porozumění a zvládání následků šoku a traumatu. Metoda tělesného prožívání pracuje přímo s autonomním nervovým systémem klienta a umožňuje tak dokončení vrozených obranných reakcí a obnovení rovnováhy nervového systému.  Skrze práci s vnímáním vastního těla, titrací, pendulací a zdrojováním rozvíjí metoda SE schopnost uvědomit si a zpracovat vlastní stresové reakce a obnovit tak zdravou sebe-regulaci nervového systému a emocí. SE nabízí nástroje jak pro práci s akutním stresem, tak s různými kategoriemi traumat a posttraumatickou stresovou poruchou. Práce cestou zdrojů a seberegulace je velice efektivní metoda, která nezatěžuje kienta znovu přehráváním nebo opakováním traumatu, a umožňuje mu tak  obnovit jeho vlastní kapacitu a schopnost žít plnohodnotným a radostným životem.
+                je jedním z nejefektivnějších nástrojů pro léčení traumatu vyučovaný po celém světě. Je to přístup umožňující terapeutovi provést klienta náročnými stavy a situacemi. Somatické prožívání je specifická metoda práce s tělem a nervovým systémem. Nabízí základní přístup k porozumění a zvládání následků šoku a traumatu. Metoda tělesného prožívání pracuje přímo s autonomním nervovým systémem klienta a umožňuje tak dokončení vrozených obranných reakcí a obnovení rovnováhy nervového systému.  Skrze práci s vnímáním vlastního těla, titrací, pendulací a zdrojováním rozvíjí metoda SE schopnost uvědomit si a zpracovat vlastní stresové reakce a obnovit tak zdravou sebe-regulaci nervového systému a emocí. SE nabízí nástroje jak pro práci s akutním stresem, tak s různými kategoriemi traumat a posttraumatickou stresovou poruchou. Práce cestou zdrojů a seberegulace je velice efektivní metoda, která nezatěžuje klienta znovu přehráváním nebo opakováním traumatu, a umožňuje mu tak  obnovit jeho vlastní kapacitu a schopnost žít plnohodnotným a radostným životem.
                 %ul
                   %li= link_to 'www.somatic-experiencing.cz', 'http://somatic-experiencing.cz/'
                   %li= link_to 'www.traumahealing.com', 'http://traumahealing.com/'
@@ -95,7 +95,7 @@
                     %li náprava raných traumat a attachmentu pro podporu seberegulace skrze sociální kontakt
                     %li techniky pro uzemnění, smyslové vnímání a schopnosti trackování u dětí a dospívajících
                     %li propojení principů SE s arteterapeutickými tehnikami pro poskytnutí bezpečí, titrace a pendulace
-                    %li přetváření her do aktivit Somatického prožívání obsahujících prvky cyklů nabití/vybití, které umožňují dětem trackování, orientaci, reakci boje nebo útěku, dávání hranic a zklidněním a integraci stavů přílišného rozrušení 
+                    %li přetváření her do aktivit Somatického prožívání obsahujících prvky cyklů nabití/vybití, které umožňují dětem trackování, orientaci, reakci boje nebo útěku, dávání hranic a zklidnění a integraci stavů přílišného rozrušení 
                     %li práce se sexuálním traumatem, traumatem způsobeným lékařskými zákroky a truchlením
                     %li hry a aktivity, které lze použít při práci s dětmi po zásahu přírodních katastrof
                     %li workshop zahrnuje teorii, videonahrávky i sebezkušenostní prožikové techniky využitelné pro individuální i skupinové práce s dětmi
@@ -108,7 +108,7 @@
                 %strong Maggie Kline 
                 bude na svém třídenní workshopu 
                 %strong Práce s traumatem u dětí
-                učit jak pomoci dětem znovu navrátit k rovnováze jejich autonomní nervový systém na biologické úrovni přežití poté, co zažily pocit přehlcení traumatickou nebo stresující událostí. Využití herních technik a tvoření v kombinaci s metodou Somatického prožívání umožní uvolnit napětí a dokončit zadržené obranné reakce, aby mohlo dojít ke znovytvoření rovnováhy a obnovení orientace a obranných impulzů. Tím se zvýší kapacita pro rozvinutí zdravého attachementu a zdravé sociální vazby dítěte. Při terapii SE a hře je tak dětem umožněno, aby mohly uvolnit své napětí v atmosféře bezpečí a skrze přítomnost klidného dospělého obnovit důvěru v sebe a okolní svět.
+                učit jak pomoci dětem znovu navrátit k rovnováze jejich autonomní nervový systém na biologické úrovni přežití poté, co zažily pocit přehlcení traumatickou nebo stresující událostí. Využití herních technik a tvoření v kombinaci s metodou Somatického prožívání umožní uvolnit napětí a dokončit zadržené obranné reakce, aby mohlo dojít ke znovuvytvoření rovnováhy a obnovení orientace a obranných impulzů. Tím se zvýší kapacita pro rozvinutí zdravého attachementu a zdravé sociální vazby dítěte. Při terapii SE a hře je tak dětem umožněno, aby mohly uvolnit své napětí v atmosféře bezpečí a skrze přítomnost klidného dospělého obnovit důvěru v sebe a okolní svět.
           #maggie.tab-pane{:role => "tabpanel"}
             .col-sm-12
               %h3
@@ -120,11 +120,11 @@
                 %strong Maggie Kline
                 se téměř třicet let věnuje praxi v oblasti párové, rodinné a dětské terapie na Long Beach v Kalifornii a má dlouholeté zkušenosti jako učitelka a školní psycholožka. Vychází z oblasti humanistické psychoterapie, rodinných systémů a Gestalt psychoterapie s doplňkovým výcvikem v práci s tělem. Maggie je specialistkou na metodu 
                 %strong Somatic Experiencing (SE),
-                léčení traumatu pomocí práce s tělem a nervovým systémem, také studovala Bodynamic terapii a metodu EMDR.
+                léčení traumatu pomocí práce s tělem a nervovým systémem, také studovala Bodynamickou terapii a metodu EMDR.
               %p
                 Při terapii s dětmi a dospívajícími integruje Maggie Kline metodu Somatic Experiencing  s uměním a  hrou. Je senior instruktorkou Somatic Experiencing trauma Institutu
                 =link_to 'www.traumahealing.com', 'http://www.traumahealing.com'
-                v  USA, Asii a Austrálii. V Evropě , Brazílii a Kanadě vede workshopy “Conscious Connections” a “SE for Kids”, určené pro odborníky pracující v pomáhajících profesích s dětmi, v oblasti výchovy a školství a pro rodiče. 
+                v  USA, Asii a Austrálii. V Evropě, Brazílii a Kanadě vede workshopy “Conscious Connections” a “SE for Kids”, určené pro odborníky pracující v pomáhajících profesích s dětmi, v oblasti výchovy a školství a pro rodiče. 
               %p
                 Maggie také vedla první tým dobrovolníků prasujících s SE v Thajsku po zásahu tsunami v Indickém oceánu v roce 2004 a vedla veřejný workshop po norském masakru v roce 2011. Přednášela na mezinárodních konferencích zaměřených na terapii hrou a trauma v Evropě a USA.  
               %p
