--- a/course/app/views/welcome/kontakt.html.haml
+++ b/course/app/views/welcome/kontakt.html.haml
@@ -1,8 +1,8 @@
 .container.mt-48
   .row
-    .col-md-12.text-center
+    .col-sm-12.text-center
       %h1 Organizátorky
-    .col-md-4
+    .col-sm-4
       %h4 Ing. Zlata Koštejnová
       %p Terapeutka Kraniosakrální biodynamiky a praktikantka metody Somatic Experiencing ® 
       %p
@@ -11,7 +11,7 @@
         %br
         %strong email:
         = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
-    .col-md-4
+    .col-sm-4
       %h4  Mgr. Michaela Čápová
       %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ®
       %p
@@ -20,7 +20,7 @@
         %br
         %strong email:
         = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
-    .col-md-4
+    .col-sm-4
       %h4  Mgr. Tereza Koryntová
       %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ®
       %p
@@ -29,5 +29,13 @@
         %br
         %strong email:
         = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
-    .col-md-12.text-center
+    .col-sm-12.text-center
       %h2 Fakturační údaje
+      %p
+        Ing. Dušan Koštejn
+        %br/
+        Lovosická 773, Praha 9, 190 00
+        %br/
+        IČ: 47566230
+        %br/
+        č.účtu: 2500029896/2010
