--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -126,7 +126,7 @@
                 =link_to 'www.traumahealing.com', 'http://www.traumahealing.com'
                 v  USA, Asii a Austrálii. V Evropě, Brazílii a Kanadě vede workshopy “Conscious Connections” a “SE for Kids”, určené pro odborníky pracující v pomáhajících profesích s dětmi, v oblasti výchovy a školství a pro rodiče. 
               %p
-                Maggie také vedla první tým dobrovolníků prasujících s SE v Thajsku po zásahu tsunami v Indickém oceánu v roce 2004 a vedla veřejný workshop po norském masakru v roce 2011. Přednášela na mezinárodních konferencích zaměřených na terapii hrou a trauma v Evropě a USA.  
+                Maggie také vedla první tým dobrovolníků pracujících s SE v Thajsku po zásahu tsunami v Indickém oceánu v roce 2004 a vedla veřejný workshop po norském masakru v roce 2011. Přednášela na mezinárodních konferencích zaměřených na terapii hrou a trauma v Evropě a USA.  
               %p
                 Spolu s Peterem Levinem napsala knihy 
                 =link_to 'Trauma očima dítěte: Probouzení obyčejného zázraku léčení (Maitrea, 2012)', 'http://www.maitrea.cz/nakladatelstvi/trauma-ocima-ditete'
