--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -15,7 +15,7 @@
         9.-12.7. 2015
         %br
         Karlova 25, Praha 1
-      = link_to 'registrace zde', new_subscriber_path, :class => 'btn btn-lg btn-success'
+      = link_to 'registrace zde do 30.4.', new_subscriber_path, :class => 'btn btn-lg btn-success'
   #scroll-down
     %i.fa.fa-angle-double-down
 .container.home
