--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -28,61 +28,18 @@
                 děkujeme za Vaši registraci na
                 %strong workshop s Maggie Kline - Práce s traumatem u dětí.
                 %br/
-                Níže Vám posíláme informace k platbě a podmínky účasti.
           %tr
             %td{:align => "left"}
-              %h4 CENA WORKSHOPU A PLATBY:
               %p
-                = "Zvolili jste variantu: #{@subscriber.participation}"
-              - case @subscriber.participation
-              - when "Intro"
-                =render partial: 'intro'
-              - when "Workshop"
-                =render partial: 'workshop'
-              - when "Intro + workshop"
-                =render partial: 'intro_workshop'
+                Kurz je již bohužel naplněn, zařazujeme Vás tedy do seznamu náhradníků, a kontaktujeme Vás po 30.4., což je termín pro zaplacení záloh a po tomto termínu budeme mít přehled o počtu míst, která se uvolnila.
               %br/
           %tr
             %td{:align => "left"}
               %p
-                Celé kurzovné nebo příslušnou zálohu zašlete na účet č.:
-                %strong 2500029896/2010
-                nejpozději
-                %strong do 30.4.2015.
-                %br/
-                Pokud jste se rozhodli pro platbu zálohy, doplatek kurzovného zašlete na účet č.:
-                %strong 2500029896/2010
-                nejpozději
-                %strong do 15.6. 2015.
-                %br/
-                Jako
-                %strong variabilní symbol
-                obou plateb uveďte své
-                %strong telefoní číslo.
+                V PŘÍPADĚ ZÁJMU VÁM NABÍZÍME MOŽNOST ZŮČASTNIT SE JEDNODENNÍHO INTRA, KDE JSOU STÁLE VOLNÁ MÍSTA. POKUD SE CHCETE INTRA ZÚČASTNIT NAPIŠTE NÁM PROSÍM NA TENTO MAIL.
           %tr
             %td{:align => "left"}
-              %h4 PODMÍNKY:
-              %ol
-                %li
-                  %strong Absolvování Intra
-                  %br/
-                  Pro účast na workshopu je povinné absolvování Intra nebo jiná předchozí zkušenost s metodou SE (Intro nebo výcvik).
-                %li
-                  %strong Zrušení workshopu
-                  %br/
-                  Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2015. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
-                %li
-                  %strong Úplné znění podmínek
-                  %br/
-                  Úplné znění podmínek naleznete na adrese
-                  = succeed "." do
-                    %a{:href => "http://www.somaticexperiencing.cz/podminky"} www.somaticexperiencing.cz/podminky
-          %tr
-            %td{:align => "left"}
-              %h4 PODROBNĚJŠÍ INFORMACE
               %p
-                Podrobnější informace k harmonogramu obdržíte na Váš email v pozvánce před konáním worksopu.
-                %br/
                 Vaše dotazy ke kurzu i platbám směřujte na email
                 = succeed "." do
                   %a{:href => "mailto:workshopmaggiekline@gmail.com"} workshopmaggiekline@gmail.com
