Updated info for 2016.

--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -12,9 +12,11 @@
           FOR KIDS
           \/ SOMATICKÉ PROŽÍVÁNÍ U DĚTÍ
       %h2
-        9.-12.7. 2015
+        28.-31.7. 2016
         %br
-        Karlova 25, Praha 1
+        Apolinářská 447/4a, Praha 2 (
+        = link_to 'mapa', 'http://mapy.cz/zakladni?source=firm&id=160509&q=apolin%C3%A1%C5%99sk%C3%A1+4a&l=1&x=14.425407&y=50.07056&z=15'
+        \)
       = link_to 'registrace zde', new_subscriber_path, :class => 'btn btn-lg btn-success'
   #scroll-down
     %i.fa.fa-angle-double-down
@@ -35,7 +37,7 @@
           \/ Somatické prožívání (SE)
         je velmi efektivní přístup umožňující léčení traumatu vyučovaný po celém světě.
       %p
-        Jednodenní workshop, na kterém se seznámíte se základními metodami somatického prožívání, je určen pro všechny zájemce o třídenní workshop  
+        Jednodenní workshop, na kterém se seznámíte se základními metodami somatického prožívání, je určen pro všechny zájemce o třídenní workshop
         %strong Práce s traumatem u dětí,
         kteří nemají žádný výcvik v této metodě.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
@@ -45,9 +47,9 @@
       %h2
         Workshop
         %span
-          Práce s traumatem u dětí 
+          Práce s traumatem u dětí
       %p
-        Třídenní workshop, na kterém se odborníci pracující s dětmi mohou naučit jak pomoci dětem, které byly zahlcené stresující nebo traumatizující událostí, znovu navrátit rovnováhu. Maggie Kline bude učit jak lze pomocí metody 
+        Třídenní workshop, na kterém se odborníci pracující s dětmi mohou naučit jak pomoci dětem, které byly zahlceny traumatizující událostí znovu navrátit rovnováhu. Tématem bude léčba šoku a traumatu dítěte, způsobeného násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací). Maggie Kline bude učit jak lze pomocí metody
         %strong Somatic Experiencing
         usnadnit uvolnění a dokončení instinktivních obranných reakcí a znovuobnovit rovnováhu autonomního nervového systému a rozvinout tak zdravé vztahování, vyrovnanost a spokojenost dítěte.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
@@ -60,15 +62,15 @@
           terapeutka, trenérka, lektorka ...
       %p
         %strong
-          Maggie Kline 
-        je více než 30 let rodinná, párová a dětská terapeutka, má dlouholeté zkušenosti též jako učitelka, školní psycholožka, je senior trenérkou profesionálního výcviku 
+          Maggie Kline
+        je více než 30 let rodinná, párová a dětská terapeutka, má dlouholeté zkušenosti též jako učitelka, školní psycholožka, je senior trenérkou profesionálního výcviku
         %strong
           Somatic Experiencing
         a jedním z hlavních členů týmu nadace Foundation of human Enrichment
         =link_to 'www.traumahealing.com', 'http://www.traumahealing.com'
-        \. Spolu s Peterem Levinem je autorkou knih 
-        %strong Trauma očima dítěte 
-        (Maitrea 2012) a 
-        %strong Prevence traumatu u dětí 
+        \. Spolu s Peterem Levinem je autorkou knih
+        %strong Trauma očima dítěte
+        (Maitrea 2012) a
+        %strong Prevence traumatu u dětí
         (Maitrea, 2014). Při práci s dětmi integruje metodu somatického prožívání s uměním a hrou.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
