--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -7,7 +7,7 @@
       %h1.nadpis Program workshopu a cena
     .col-md-6
       %p
-        Workshop je rozdělen do dvou částí, přičemž 
+        Workshop je rozdělen do dvou částí, přičemž
         %strong pro účast na workshopu je nutné mít absolvované Intro, nebo výcvik v SE.
         Intro lze absolvovat před workshopem nebo uznáme dříve absolvovaná Intra.
       %ol
@@ -19,11 +19,11 @@
           %th Intro
           %th Workshop
           %th Intro + workshop
-          
+
         %tr
-          %td 9.7.2015
-          %td 10. - 12.7.2015
-          %td 9. - 12.7.2015
+          %td 28.7.2016
+          %td 29.7. - 31.7.2016
+          %td 28.7. - 31.7.2016
 
         %tr
           %td Chci pouze Intro
@@ -32,8 +32,8 @@
 
         %tr
           %td 2 500 Kč
-          %td 8 500 Kč
-          %td 10 500 Kč
+          %td 8 900 Kč
+          %td 11 000 Kč
 .container-fluid.info
   .row
     .col-md-10.col-md-offset-1.text-center
@@ -55,8 +55,8 @@
               %h3
                 Intro
               %ul
-                %li  
-                  Intro - úvod do základů metody SE, je jednodenní workshop určený pro všechny zájemce o třídenní workshop 
+                %li
+                  Intro - úvod do základů metody SE, je jednodenní workshop určený pro všechny zájemce o třídenní workshop
                   %strong Práce s traumatem u dětí,
                   kteří nemají žádný výcvik v této metodě. Absolvování tohoto úvodu je podmínkou pro účast na třídenním workshopu Práce s traumatem u dětí.
                 %li Seznámíte se s teorií, základními principy a metodami somatického prožívání dle Petera Levina.
@@ -84,31 +84,31 @@
             .col-sm-6
               %ul
                 %li
-                  Třídenní workshop 
-                  %strong Práce s traumatem u dětí, 
+                  Třídenní workshop
+                  %strong Práce s traumatem u dětí,
                   je určen pro ty, kteří absolvovali Intro - Úvod do základů metody Somatického prožívání nebo již mají výcvik v této metodě.
                 %li
                   %strong
-                    Obsah workshopu:
+                    Obsah letošního workshopu bude s větším důrazem na léčbu traumat způsobených  násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací).
                   %ul
-                    %li seznámení se s vývojovými stádii dítěte z hlediska Somatického prožívání 
+                    %li seznámení se s vývojovými stádii dítěte z hlediska Somatického prožívání
                     %li náprava raných traumat a attachmentu pro podporu seberegulace skrze sociální kontakt
                     %li techniky pro uzemnění, smyslové vnímání a schopnosti trackování u dětí a dospívajících
                     %li propojení principů SE s arteterapeutickými tehnikami pro poskytnutí bezpečí, titrace a pendulace
-                    %li přetváření her do aktivit Somatického prožívání obsahujících prvky cyklů nabití/vybití, které umožňují dětem trackování, orientaci, reakci boje nebo útěku, dávání hranic a zklidněním a integraci stavů přílišného rozrušení 
+                    %li přetváření her do aktivit Somatického prožívání obsahujících prvky cyklů nabití/vybití, které umožňují dětem trackování, orientaci, reakci boje nebo útěku, dávání hranic a zklidněním a integraci stavů přílišného rozrušení
                     %li práce se sexuálním traumatem, traumatem způsobeným lékařskými zákroky a truchlením
                     %li hry a aktivity, které lze použít při práci s dětmi po zásahu přírodních katastrof
                     %li workshop zahrnuje teorii, videonahrávky i sebezkušenostní prožikové techniky využitelné pro individuální i skupinové práce s dětmi
                 %li workshop je určen pro psychology, pedagogy, terapeuty, rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých
                 %li Zajištěn překlad z AJ do ČJ
-                %li Tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE.  
-                %li Účast na celém programu (Intro+workshop) lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání. 
+                %li Tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE.
+                %li Účast na celém programu (Intro+workshop) lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
             .col-sm-6
               %p
-                %strong Maggie Kline 
-                bude na svém třídenní workshopu 
+                %strong Maggie Kline
+                bude na svém třídenní workshopu
                 %strong Práce s traumatem u dětí
-                učit jak pomoci dětem znovu navrátit k rovnováze jejich autonomní nervový systém na biologické úrovni přežití poté, co zažily pocit přehlcení traumatickou nebo stresující událostí. Využití herních technik a tvoření v kombinaci s metodou Somatického prožívání umožní uvolnit napětí a dokončit zadržené obranné reakce, aby mohlo dojít ke znovytvoření rovnováhy a obnovení orientace a obranných impulzů. Tím se zvýší kapacita pro rozvinutí zdravého attachementu a zdravé sociální vazby dítěte. Při terapii SE a hře je tak dětem umožněno, aby mohly uvolnit své napětí v atmosféře bezpečí a skrze přítomnost klidného dospělého obnovit důvěru v sebe a okolní svět.
+                učit jak pomoci dětem znovu navrátit k rovnováze jejich autonomní nervový systém na biologické úrovni přežití poté, co zažily pocit přehlcení traumatickou nebo stresující událostí. V letošním roce se zaměří podrobněji na léčbu šoku a traumatu dítěte způsobeného násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací). Využití herních technik a tvoření v kombinaci s metodou Somatického prožívání umožní uvolnit napětí a dokončit zadržené obranné reakce, aby mohlo dojít ke znovytvoření rovnováhy a obnovení orientace a obranných impulzů. Tím se zvýší kapacita pro rozvinutí zdravého attachementu a zdravé sociální vazby dítěte. Při terapii SE a hře je tak dětem umožněno, aby mohly uvolnit své napětí v atmosféře bezpečí a skrze přítomnost klidného dospělého obnovit důvěru v sebe a okolní svět.
           #maggie.tab-pane{:role => "tabpanel"}
             .col-sm-12
               %h3
@@ -118,21 +118,20 @@
             .col-sm-10
               %p
                 %strong Maggie Kline
-                se téměř třicet let věnuje praxi v oblasti párové, rodinné a dětské terapie na Long Beach v Kalifornii a má dlouholeté zkušenosti jako učitelka a školní psycholožka. Vychází z oblasti humanistické psychoterapie, rodinných systémů a Gestalt psychoterapie s doplňkovým výcvikem v práci s tělem. Maggie je specialistkou na metodu 
+                se téměř třicet let věnuje praxi v oblasti párové, rodinné a dětské terapie na Long Beach v Kalifornii a má dlouholeté zkušenosti jako učitelka a školní psycholožka. Vychází z oblasti humanistické psychoterapie, rodinných systémů a Gestalt psychoterapie s doplňkovým výcvikem v práci s tělem. Maggie je specialistkou na metodu
                 %strong Somatic Experiencing (SE),
                 léčení traumatu pomocí práce s tělem a nervovým systémem, také studovala Bodynamic terapii a metodu EMDR.
               %p
                 Při terapii s dětmi a dospívajícími integruje Maggie Kline metodu Somatic Experiencing  s uměním a  hrou. Je senior instruktorkou Somatic Experiencing trauma Institutu
                 =link_to 'www.traumahealing.com', 'http://www.traumahealing.com'
-                v  USA, Asii a Austrálii. V Evropě , Brazílii a Kanadě vede workshopy “Conscious Connections” a “SE for Kids”, určené pro odborníky pracující v pomáhajících profesích s dětmi, v oblasti výchovy a školství a pro rodiče. 
+                v  USA, Asii a Austrálii. V Evropě , Brazílii a Kanadě vede workshopy “Conscious Connections” a “SE for Kids”, určené pro odborníky pracující v pomáhajících profesích s dětmi, v oblasti výchovy a školství a pro rodiče.
               %p
-                Maggie také vedla první tým dobrovolníků prasujících s SE v Thajsku po zásahu tsunami v Indickém oceánu v roce 2004 a vedla veřejný workshop po norském masakru v roce 2011. Přednášela na mezinárodních konferencích zaměřených na terapii hrou a trauma v Evropě a USA.  
+                Maggie také vedla první tým dobrovolníků prasujících s SE v Thajsku po zásahu tsunami v Indickém oceánu v roce 2004 a vedla veřejný workshop po norském masakru v roce 2011. Přednášela na mezinárodních konferencích zaměřených na terapii hrou a trauma v Evropě a USA.
               %p
-                Spolu s Peterem Levinem napsala knihy 
+                Spolu s Peterem Levinem napsala knihy
                 =link_to 'Trauma očima dítěte: Probouzení obyčejného zázraku léčení (Maitrea, 2012)', 'http://www.maitrea.cz/nakladatelstvi/trauma-ocima-ditete'
                 a
                 =link_to 'Prevence traumatu u dětí (Maitrea, 2014).', 'http://www.maitrea.cz/nakladatelstvi/prevence-traumatu-u-deti'
-                A je také spoluautorkou článku It Won't Hurt Forever--Guiding Your Child through Trauma (Nebude to bolet navždy - jak provést vaše dítě traumatem: časopis Mothering, 2002). Nejnovějším projektem Maggie bylo 15 videorozhovorů, které byly natočeny a jsou zdarma k dispozici pro rodiče, aby mohli pomáhat svým dětem vyrovnat se s traumatem a ztrátou 
-                =link_to 'www.kidsinthehouse.com', 'http://www.kidsinthehouse.com' 
+                A je také spoluautorkou článku It Won't Hurt Forever--Guiding Your Child through Trauma (Nebude to bolet navždy - jak provést vaše dítě traumatem: časopis Mothering, 2002). Nejnovějším projektem Maggie bylo 15 videorozhovorů, které byly natočeny a jsou zdarma k dispozici pro rodiče, aby mohli pomáhat svým dětem vyrovnat se s traumatem a ztrátou
+                =link_to 'www.kidsinthehouse.com', 'http://www.kidsinthehouse.com'
                 (2013).
-          
