--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -17,6 +17,7 @@
         Apolinářská 447/4a, Praha 2 (
         = link_to 'mapa', 'http://mapy.cz/zakladni?source=firm&id=160509&q=apolin%C3%A1%C5%99sk%C3%A1+4a&l=1&x=14.425407&y=50.07056&z=15'
         \)
+      = link_to 'registrace zde', new_subscriber_path, :class => 'btn btn-lg btn-success'
   #scroll-down
     %i.fa.fa-angle-double-down
 .container.home
