--- a/course/app/views/layouts/application.html.haml
+++ b/course/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Práce s traumatem u dětí - Maggie Kline
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,400italic&subset=latin-ext", :rel => "stylesheet", :type => "text/css"}
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
