--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -49,7 +49,7 @@
     Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2016. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
   %li
     Úplné znění podmínek naleznete na adrese
-    = link_to "http://secourse.cz/podminky", "http://secourse.cz/podminky"
+    = link_to "www.somaticexperiencing.cz/podminky", "http://www.somaticexperiencing.cz/podminky"
 
 
 %p
