--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -17,7 +17,7 @@
         Apolinářská 447/4a, Praha 2 (
         = link_to 'mapa', 'http://mapy.cz/zakladni?source=firm&id=160509&q=apolin%C3%A1%C5%99sk%C3%A1+4a&l=1&x=14.425407&y=50.07056&z=15'
         \)
-      = link_to 'registrace zde', new_subscriber_path, :class => 'btn btn-lg btn-success'
+      = link_to 'registrace zde do 30.4.', new_subscriber_path, :class => 'btn btn-lg btn-success'
   #scroll-down
     %i.fa.fa-angle-double-down
 .container.home
@@ -49,7 +49,9 @@
         %span
           Práce s traumatem u dětí
       %p
-        Třídenní workshop, na kterém se odborníci pracující s dětmi mohou naučit jak pomoci dětem, které byly zahlceny traumatizující událostí znovu navrátit rovnováhu. Tématem bude léčba šoku a traumatu dítěte, způsobeného násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací). Maggie Kline bude učit jak lze pomocí metody
+        Třídenní workshop, na kterém se odborníci pracující s dětmi mohou naučit jak pomoci dětem, které byly zahlceny traumatizující událostí znovu navrátit rovnováhu.
+        %strong Tématem bude léčba šoku a traumatu dítěte, způsobeného násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací).
+        Maggie Kline bude učit jak lze pomocí metody
         %strong Somatic Experiencing
         usnadnit uvolnění a dokončení instinktivních obranných reakcí a znovuobnovit rovnováhu autonomního nervového systému a rozvinout tak zdravé vztahování, vyrovnanost a spokojenost dítěte.
       = link_to 'více informací viz program', program_path, :class => 'btn btn-primary'
